public/css/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4
}

header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background-image: url("../img/title_bg.jpg");
    text-align: center;
    padding: 0px 10px 10px 10px;
    transform: translateY(0);
    transition: transform 0.2s ease-in-out;
    z-index: 1000;
}

.content {
    
    margin-top: 70px

}

.logo_side  {
    font-size: 70px;
    height: 60px;
    width: 60px;
    margin: 0px 40px 0px 0px;
}

.logo {
    display: flex;
    align-items: flex-start;
    height: 60px;
    width: fit-content;
    
}
.logo_stack {
    margin: 5px 0px 0px 0px;
    text-align: left;
}
.logo_stack h2 {
    margin: 3%;
}

.banner {
    background-image: url("img/banner.jpg");
}

.services_container {
    padding: 20px;
    background-color: #f4f4f4;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 16px 16px;
    width: viewport;
}
.service {
    max-width: 500px;
    max-height: calc(max-width 9/6);
    aspect-ratio: 9/6;
    border: 1px solid #ccc;
    border-radius: 10px;
    text-align: left;
}
.service_image {
    width: 100%;
    height: 100%;
    object-fit:cover;
    border-radius: 10px 10px 0px 0px;
}
.service_name {
    font-size: 1.5em;
    font-weight: bold;
    margin: 0px 0px 0px 5px;

}
.service_description {
    color: gray;
    margin: 0px 0px 0px 5px;
}

.panel {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7); /* Dark background */
  }

  .panel_content {
    background-color: white;
    margin: 10% auto;
    padding: 20px;
    width: 80%; /* Take up most of the viewport */
    text-align: center;
  }
  
  .close_btn {
    font-size: 30px;
    cursor: pointer;
    color: rebeccapurple;
    text-align: right;
  }

@media screen and (max-width: 675px) {
    .services_container {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    }
}  

